Fixed Main Screen Padding and Alignment

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ p {
   border: 3px solid blue;
 } */
 
-main-screen {
+.main-screen {
   padding: 15rem 0;
 }
 
